--- a/pipeline/database/db-compose.yml
+++ b/pipeline/database/db-compose.yml
@@ -34,7 +34,7 @@ services:
   #   ports:
   #     - 5433:80
   #   environment:
-  #       PGADMIN_DEFAULT_EMAIL: serdark@d-teknoloji.com.tr
+  #       PGADMIN_DEFAULT_EMAIL: serdar@k.com
   #       PGADMIN_DEFAULT_PASSWORD: super
   #   networks:
   #    - gostorenet
